--- a/5.control-gastos-contextapi/package.json
+++ b/5.control-gastos-contextapi/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
+    "react-date-picker": "^12.0.1",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
   },
