--- a/5.control-gastos-contextapi/package.json
+++ b/5.control-gastos-contextapi/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-date-picker": "^12.0.1",
     "react-dom": "^19.2.0",
     "react-swipeable-list": "^1.10.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
+    "typescript-eslint": "^8.14.0",
     "vite": "^7.2.4"
   }
 }
